--- a/gui/gui.ui
+++ b/gui/gui.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>301</width>
+    <width>403</width>
     <height>354</height>
    </rect>
   </property>
@@ -118,10 +118,68 @@ QPushButton:pressed{
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>281</width>
+     <width>371</width>
      <height>41</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">font-size: 22px</string>
+   </property>
+   <property name="text">
+    <string>asdasd</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="verticalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>60</y>
+     <width>85</width>
+     <height>271</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QPushButton" name="plus">
+      <property name="styleSheet">
+       <string notr="true">font-size: 36px;</string>
+      </property>
+      <property name="text">
+       <string>+</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="minus">
+      <property name="styleSheet">
+       <string notr="true">font-size: 36px;</string>
+      </property>
+      <property name="text">
+       <string>-</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="multiply">
+      <property name="styleSheet">
+       <string notr="true">font-size: 36px;</string>
+      </property>
+      <property name="text">
+       <string>*</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="equal">
+      <property name="styleSheet">
+       <string notr="true">font-size: 36px;</string>
+      </property>
+      <property name="text">
+       <string>=</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
