--- a/gui/gui.ui
+++ b/gui/gui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>403</width>
-    <height>354</height>
+    <width>395</width>
+    <height>431</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -37,75 +37,75 @@ QPushButton:pressed{
      <x>11</x>
      <y>59</y>
      <width>281</width>
-     <height>271</height>
+     <height>361</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="1" column="1">
-     <widget class="QPushButton" name="pushButton_5">
+     <widget class="QPushButton" name="five">
       <property name="text">
        <string>5</string>
       </property>
      </widget>
     </item>
     <item row="2" column="0">
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="one">
       <property name="text">
        <string>1</string>
       </property>
      </widget>
     </item>
     <item row="0" column="0">
-     <widget class="QPushButton" name="pushButton_3">
+     <widget class="QPushButton" name="seven">
       <property name="text">
        <string>7</string>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="four">
       <property name="text">
        <string>4</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QPushButton" name="pushButton_4">
+     <widget class="QPushButton" name="eight">
       <property name="text">
        <string>8</string>
       </property>
      </widget>
     </item>
     <item row="0" column="2">
-     <widget class="QPushButton" name="pushButton_7">
+     <widget class="QPushButton" name="nine">
       <property name="text">
        <string>9</string>
       </property>
      </widget>
     </item>
     <item row="1" column="2">
-     <widget class="QPushButton" name="pushButton_8">
+     <widget class="QPushButton" name="six">
       <property name="text">
        <string>6</string>
       </property>
      </widget>
     </item>
     <item row="2" column="2">
-     <widget class="QPushButton" name="pushButton_9">
+     <widget class="QPushButton" name="three">
       <property name="text">
        <string>3</string>
       </property>
      </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QPushButton" name="pushButton_6">
+     <widget class="QPushButton" name="two">
       <property name="text">
        <string>2</string>
       </property>
      </widget>
     </item>
     <item row="3" column="1">
-     <widget class="QPushButton" name="pushButton_10">
+     <widget class="QPushButton" name="zero">
       <property name="text">
        <string>0</string>
       </property>
@@ -122,11 +122,17 @@ QPushButton:pressed{
      <height>41</height>
     </rect>
    </property>
+   <property name="layoutDirection">
+    <enum>Qt::LeftToRight</enum>
+   </property>
    <property name="styleSheet">
-    <string notr="true">font-size: 22px</string>
+    <string notr="true">font-size: 32px; font-weight: bold;</string>
    </property>
    <property name="text">
-    <string>asdasd</string>
+    <string>Hello</string>
+   </property>
+   <property name="clearButtonEnabled">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QWidget" name="verticalLayoutWidget">
@@ -135,7 +141,7 @@ QPushButton:pressed{
      <x>300</x>
      <y>60</y>
      <width>85</width>
-     <height>271</height>
+     <height>361</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -166,6 +172,20 @@ QPushButton:pressed{
       </property>
       <property name="text">
        <string>*</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="divide">
+      <property name="text">
+       <string>/</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="clear">
+      <property name="text">
+       <string>C</string>
       </property>
      </widget>
     </item>
